# eigen3tutorial

./: .gitignore  CMakeLists.txt  README.md  _config.yml  check_markdown.sh  chp01.md  chp02.md  chp03.md  chp04.md  chp05.md  chp06.md  chp07.md  eigen3version.cpp  matlab_eigen3_crush.cpp
_layouts/: default.html
assets/css/: main.css  style.css  style.scss
chapters/: chp01.md  chp02.md  chp03.md  chp04.md  chp05.md  chp07.md
chp01/: basic_matrix.cpp  matrix_arithmetic.cpp  special_matrices.cpp
chp02/: matrix_decompositions.cpp  matrix_operations.cpp
chp03/: linear_equations.cpp  vector_advanced.cpp  vector_operations.cpp
chp04/: least_squares.cpp  linear_equations.cpp
chp05/: eigenvalues.cpp  pca_example.cpp
chp06/: rotations.cpp  transforms.cpp
chp07/: advanced_features.cpp  sparse_matrix.cpp
